Adding Genres section

--- a/index.html
+++ b/index.html
@@ -30,25 +30,28 @@
         <section class="genres">
             <h2>Genres</h2>
             <div class="genre-links">
-                <a href="#">Action</a>
-                <a href="#">Comedy</a>
-                <a href="#">Drama</a>
-                <a href="#">Horror</a>
-                <a href="#">Science Fiction</a>
-                <a href="#">Animation</a>
+                <a href="#" data-genre-id="28">Action</a>
+                <a href="#" data-genre-id="35">Comedy</a>
+                <a href="#" data-genre-id="18">Drama</a>
+                <a href="#" data-genre-id="27">Horror</a>
+                <a href="#" data-genre-id="878">Science Fiction</a>
+                <a href="#" data-genre-id="16">Animation</a>
             </div>
         </section>
 
         <section class="favorites">
             <h2>Favorites</h2>
             <div class="movie-cards">
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
-                <div class="movie-card"></div>
             </div>
         </section>
     </div>
-</body>
+    
+    <footer>
+<div class="footer-content">
+    <p>&copy; 2025 MovieVerse. All rights reserved.</p>
+    <p>BYU Pathway - Final Project - Julio Celón</p>
+    <p>Data provided by <a href="https://www.themoviedb.org/" target="_blank">TMDB</a>.</p>
+</div>
+    </footer>
+    </body>
 </html>
