--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,8 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;600&display=swap" rel="stylesheet">
     
-    <script src="./scripts/loader.js" defer></script>
+    <script src="./scripts/main.mjs" type="module" defer></script>
+
 </head>
 <body>
     <div class="container">
@@ -17,7 +18,11 @@
             <div class="logo">
                 <img src="./images/logo2.png" alt="Movieverse Logo">
             </div>
-            <input type="text" class="search-bar" placeholder="Buscar películas...">
+            <div class="search-container">
+                <input type="text" class="search-bar" placeholder="Search movies...">
+                <div class="search-results">
+                    </div>
+            </div>
         </header>
 
 
@@ -36,11 +41,12 @@
                 <a href="#" data-genre-id="27">Horror</a>
                 <a href="#" data-genre-id="878">Science Fiction</a>
                 <a href="#" data-genre-id="16">Animation</a>
-            </div>
+                <a href="#" data-genre-id="favorites">My Favorites</a>
+                </div>
         </section>
 
-        <section class="favorites">
-            <h2>Favorites</h2>
+        <section class="genre-results">
+            <h2>Selected Genre Movies</h2>
             <div class="movie-cards">
             </div>
         </section>
@@ -53,5 +59,5 @@
     <p>Data provided by <a href="https://www.themoviedb.org/" target="_blank">TMDB</a>.</p>
 </div>
     </footer>
-    </body>
+</body>
 </html>
