--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             </div>
             <div class="search-container">
                 <input type="text" class="search-bar" placeholder="Search movies...">
-                <div class="search-results">
-                    </div>
+                <div class="search-results"></div>
             </div>
         </header>
 
