Impreovement in video trailer and logo

--- a/movie-detail.html
+++ b/movie-detail.html
@@ -15,7 +15,7 @@
         <header class="detail-header">
             <a href="index.html" class="back-button">&lt; Back</a>
             <div class="logo-placeholder">
-                <img src="./images/logo2.png" alt="Movieverse Logo">
+                <img src="./images/logo2.webp" alt="Movieverse Logo">
             </div>
         </header>
 
