--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;600&display=swap" rel="stylesheet">
     
-    <script src="./scripts/main.mjs" type="module" defer></script>
+    <script src="./scripts/main.mjs" type="module"></script>
     <script type="module" src="/src/main.js"></script>
 
 </head>
@@ -17,7 +17,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="./images/logo2.png" alt="Movieverse Logo">
+                <img src="./images/logo2.webp" alt="Movieverse Logo">
             </div>
             <div class="search-container">
                 <input type="text" class="search-bar" placeholder="Search movies...">
