--- a/movie-detail.html
+++ b/movie-detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieVerse - Movie Title</title>
+        <link rel="icon" type="image/png" href="./images/favicon.ico" sizes="32x32">
     <link rel="stylesheet" href="./styles/detail-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;600&display=swap" rel="stylesheet">
 
@@ -15,7 +16,7 @@
         <header class="detail-header">
             <a href="index.html" class="back-button">&lt; Back</a>
             <div class="logo-placeholder">
-                <img src="./images/logo2.webp" alt="Movieverse Logo">
+                <img src="./images/logo2.webp" alt="Movieverse Logo" fetchpriority="high">>
             </div>
         </header>
 
