--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieVerse | Home</title>
-
+    <link rel="icon" type="image/png" href="./images/favicon.ico" sizes="32x32">
     <script src="./scripts/main.mjs" type="module"></script>
     <link rel="stylesheet" href="./styles/styles.css">
     
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="./images/logo2.webp" alt="Movieverse Logo">
+                <img src="./images/logo2.webp" alt="Movieverse Logo" fetchpriority="high">
             </div>
             <div class="search-container">
                 <input type="text" class="search-bar" placeholder="Search movies...">
